# drone-nrf91-dso

./: Cargo.toml  Justfile  README.md
.cargo/: config
src/: lib.rs  logger.rs  set_log.rs  uart_logger.rs  uarte.rs
